# my-llm

./: .gitignore  README.md  eval.py  eval_llm.py  eval_my_llm.py  labels.txt  main.py  net_eval.py  net_eval_and_k230.py  net_eval_other.py  new_labels.txt  pyproject.toml  sine_wave.mif  test.py  test_llm.py
k230_and_pc_other_file/: create_sin_data.py  my_ocr_transmit.py  presses_dataset.py
model/: model.py  model_minimind.py
net/: success_for_communication.py  tcp_test.py
net_used_for_test/: 0.py  begin_ocr_transform_client.py  success_for_communication.py
ocr_model/: ocr_rec.py
ocr检测/: config.json  samples.txt  split_inf.json  test_list.txt  train_list.txt  val_list.txt
ocr检测/deployment_source/: README.md
ocr检测/deployment_source/cpp_deployment_source/: best_OCR_DNet_can2_5.0s_20251203190318.kmodel  deploy_config.json
ocr检测/deployment_source/cpp_deployment_source/example_code_k230/: CMakeLists.txt  build_app.sh
ocr检测/deployment_source/cpp_deployment_source/example_code_k230/k230_deploy/: CMakeLists.txt  anchorbase_det.cc  anchorbase_det.h  anchorfree_det.cc  anchorfree_det.h  anomaly_det.cc  anomaly_det.h  classification.cc  classification.h  clipper.cpp  gfl_det.cc  gfl_det.h  main.cc  metriclearning.cc  metriclearning.h  ocr_box.cc  (+10 more)
ocr检测/deployment_source/mp_deployment_source/: ocrdet_image.py  ocrdet_video.py
ocr识别/: best_OCR_RLNet_can2_5.0s_20251205121539.onnx  config.json  deploy_config.json  dict.txt  dict_16.txt  samples.txt  split_inf.json  test_list.txt  train_list.txt  val_list.txt
trainer/: train_distill_reason.py  train_pretrain.py
