[project]
name = "my-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.ruff]
target-version = "py312"
preview = true
select = [
    "E",
    "F",
    "W",
    "C90",
    "B",
    "Q000",
]
